2004-09-23  John W. Eaton  <jwe@octave.org>

	* strings/strcmp.m: If args are not strings or cell arrays of
	strings, return zero instead of reporting an error.

2004-09-22  Federico Zenith  <zenith@chemeng.ntnu.no>

	* control/base/analdemo.m, control/base/are.m, control/base/bddemo.m,
	control/base/controldemo.m, control/base/damp.m, control/base/dare.m, 
	control/base/dcgain.m, control/base/dgram.m, control/base/dlyap.m,
	control/base/dre.m, control/base/frdemo.m, control/base/gram.m,
	control/base/impulse.m, control/base/lqp.m, control/base/obsv.m,
	control/base/pzmap.m, control/base/rldemo.m, control/hinf/h2norm.m,
	control/hinf/hinfsyn.m, control/hinf/hinfsyn_ric.m,
	control/hinf/is_dgkf.m, control/system/c2d.m, 
	control/system/is_detectable.m, control/system/is_sample.m,
	control/system/is_siso.m, control/system/is_stable.m,
	control/system/ss2sys.m, control/system/ss.m, control/system/sys2ss.m,
	control/system/sys2tf.m, control/system/sys2zp.m, 
	control/system/sysappend.m, control/system/sysconnect.m,
	control/system/sysdisc.m, control/system/sysdup.m,
	control/system/sysgetsignals.m, control/system/sysmult.m,
	control/system/syssetsignals.m, control/system/syssub.m,
	control/system/tf2sys.m, control/system/ugain.m,
	control/system/zp2ss.m, control/system/zp2sys.m, 
	control/system/zp2tf.m, control/util/axis2dlim.m, polynomial/roots.m,
	special-matrix/toeplitz.m: Fix typos in doc strings.

	* control/base/are.m, control/base/dare.m, control/base/lsim.m,
	control/base/ltifr.m, control/base/place.m,control/base/tzero2.m,
	control/base/tzero.m, control/hinf/hinf_ctr.m, control/hinf/wgt1o.m,
	ontrol/system/is_abcd.m, control/system/parallel.m,
	control/system/ss2tf.m, control/system/ss2zp.m, control/system/ss.m,
	control/system/sysappend.m, control/system/sysconnect.m,
	control/system/sysdup.m, control/system/sysgroup.m,
	control/system/sysprune.m, control/system/sysreorder.m,
	control/system/sysscale.m, control/system/syssub.m,